fixed the video size and buttons
video good style good fixing the username

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,114 +1,131 @@
-body{
-  background:#0F2027;
-  background:-webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027) ;
-  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+@import url('https://fonts.googleapis.com/css2?family=Borel&display=swap');
 
+body {
+  margin: 0;
+  padding: 0;
+  background: #0F2027;
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  align-items: center;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
+.name{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+#display_name{
+  font-family: 'Borel', cursive;
+  font-size: 30px;
+  letter-spacing: normal;
+  
+}
 
 /* INPUT FIELD */
 .input {
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
-   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-repeat: no-repeat;
-    border-radius: 89% 29% 90% 23% / 0% 100% 0% 100%;
-    border-color: transparent;
-    width: 200px;
-    height: 10px;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin:7em auto;
-    text-align: center;
-    font-weight: 500;
-    font-family: inherit;
-    box-shadow: 23px 23px 46px #bebebe,
-               -23px -23px 46px #ffffff;
-  }
-  
-  .input::placeholder {
-    color: white;
-  }
+  background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
+  background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
+  background-repeat: no-repeat;
+  border-radius: 89% 29% 90% 23% / 0% 100% 0% 100%;
+  border-color: transparent;
+  width: 200px;
+  height: 10px;
+  padding: 20px;
+  display: inline;
+  text-align: center;
+  font-weight: 500;
+  font-family: inherit;
+  margin: auto; 
+  margin-top: 400px;
+}
 
-  /* INPUT FIELD END */
+.input::placeholder {
+  color: white;
+}
 
-  /* BUTTON  START*/
+/* BUTTON  START*/
+button {
+  background-color: #fff;
+  border: 1px solid #25D366;
+  padding: 5px;
+  position: relative;
+  width: 6.2em;
+  height: 2em;
+  transition: 0.5s;
+  font-size: 17px;
+  border-radius: 0.4em;
+  margin-bottom: -4em;
+}
 
-  button {
-    background-color: #fff;
-    border: 1px solid #25D366;
-    padding: 5px;
-    position: relative;
-    width: 6.2em;
-    height: 2em;
-    transition: 0.5s;
-    font-size: 17px;
-    border-radius: 0.4em;
-    /* margin-left: 50em; */
-  }
-  
-  button p {
-    position: absolute;
-    top: 0.4em;
-    left: 1.15em;
-    margin: 0;
-    padding: 0;
-    transition: .5s;
-    color: #25D366;
-  }
-  
-  button svg {
-    position: absolute;
-    top: 0.45em;
-    right: 0.5em;
-    margin: 0;
-    padding: 0;
-    opacity: 0;
-    transition: 0.5s;
-    height: 1em;
-    fill: #fff
-  }
-  
-  button:hover p {
-    left: 0.5em;
-    color: #fff
-  }
-  
-  button:hover svg {
-    opacity: 1;
-  }
-  
-  button:hover {
-    background-color: #25D366;
-  }
+button p {
+  position: absolute;
+  top: 0.4em;
+  left: 1.15em;
+  margin: 0;
+  padding: 0;
+  transition: .5s;
+  color: #25D366;
+}
 
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center the form elements horizontally */
-  }
-  
-  .button-div {
-    margin-top: -5em; /* Negative margin-top to bring the button closer to the input */
-  }
+button svg {
+  position: absolute;
+  top: 0.45em;
+  right: 0.5em;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  transition: 0.5s;
+  height: 1em;
+  fill: #fff
+}
 
-  /* BUTTON END */
+button:hover p {
+  left: 0.5em;
+  color: #fff
+}
 
+button:hover svg {
+  opacity: 1;
+}
 
-  /*  START THE video-streams */
+button:hover {
+  background-color: #25D366;
+}
 
-  .video-streams{
-    display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    height: 90vh;
-    width: 1400px;
-    margin:0 auto;
-  }
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+
+.button-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+
+}
+
+/* BUTTON END */
+
+/*  START THE video-streams */
+.video-streams {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  height: 90vh;
+  width: 1400px;
+  margin: -4em auto;
+}
 
   .video-container{
     max-height: 100%;
@@ -125,7 +142,7 @@ body{
   .stream-controls{
     display: none;
     justify-content: center;
-    margin-top:0.5em;
+    margin-top:0.9em;
   }
 
   @media screen and (max-width:1400px){
@@ -134,6 +151,8 @@ body{
         width: 95%;
     }
 }
+
+
 
 
 
